# freshrig

./: .gitattributes  .gitignore  CLAUDE.md  LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  README.md  SECURITY.md  freshrig-launch-audit.agent.md  freshrig-release-manager.agent.md  launch.config.json  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.claude/: settings.local.json
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE_CHANGES_2026-06-14.md  IMPROVEMENT_PLAN.md  PLATFORM_PARITY.md
docs/_archive/: AUDIT_2026-05-06.md  LAUNCH_AUDIT.md  REFACTOR_2026-05-06.md  freshrig-docs-auditor.agent.md  freshrig-issue-fix.agent.md  freshrig-platform-parity.agent.md  github-ci-monitor.agent.md
docs/launch/: DOMAIN_EMAIL_SETUP.md  LEGAL_CHECKLIST.md  MARKETING_KIT.md  README.md
docs/security/: 2026-06-14-hardening-pass.md
scripts/: launch.mjs
site/: download.html  index.html  privacy.html  robots.txt  sitemap.xml  terms.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  portable.rs  util.rs
src-tauri/src/commands/: apps.rs  branding.rs  bulk_deploy.rs  cleanup.rs  custom_apps.rs  drivers.rs  fleet.rs  hardware.rs  integrations.rs  license.rs  mod.rs  network.rs  platform_info.rs  privacy_drift.rs  profile_sync.rs  report.rs  secrets.rs  smart_monitor.rs  watchdog.rs  winget_search.rs  wmi_util.rs
src-tauri/src/commands/linux/: app_catalog.rs  apps.rs  cleanup.rs  drivers.rs  hardware.rs  network.rs  report.rs  startup.rs  util.rs
src-tauri/src/commands/macos/: app_catalog.rs  apps.rs  network.rs  startup.rs
src-tauri/src/data/: app_catalog.rs  mod.rs
src-tauri/src/models/: apps.rs  mod.rs
src/components/aangepaste/: AangepasteSetupPage.tsx
src/components/about/: AboutPage.tsx
src/components/apps/: AddCustomAppDialog.tsx  AppCard.tsx  AppsPage.tsx  PresetSelector.tsx  WingetSearchResults.tsx
src/components/cleanup/: CleanupPage.tsx
src/components/context_menu/: ContextMenuPage.tsx
src/components/custom-setup/: CustomSetupPage.tsx
src/components/dashboard/: ActionStrip.tsx  Dashboard.tsx  DashboardHero.tsx  SmartHealthCard.tsx  SystemMetricsBar.tsx
src/components/drivers/: DriversPage.tsx
src/components/fleet/: BulkDeployPanel.tsx  FleetDashboard.tsx  MachineDetail.tsx
src/components/layout/: Sidebar.tsx  SidebarSystemCard.tsx  TitleBar.tsx
src/components/network/: NetworkPage.tsx
src/components/onboarding/: SplashScreen.tsx  (+1 more)
src/config/: app.ts
src/data/: changelog.ts
src/i18n/: index.ts
src/lib/: action.ts  api.ts  errors.ts  index.ts  invoke.ts  lazy.ts  runtime.ts
src/stores/: appStore.ts  debloatStore.ts  driverStore.ts  hardwareStore.ts  licenseStore.ts  profileStore.ts  settingsStore.ts
src/types/: apps.ts  branding.ts  fleet.ts  integrations.ts  privacyDrift.ts  profileSync.ts  smart.ts  watchdog.ts
(+39 files in other folders)
