[package]
name = "freshrig"
version = "1.2.0"
description = "Hardware detection, driver setup, app batch install, and system optimization for Windows, Linux, and macOS."
authors = ["FreshRig"]
edition = "2021"

[lib]
name = "freshrig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1"
base64 = "0.22"
regex = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
strsim = "0.11"
futures-util = "0.3"
jwalk = "0.8"
trash = "5"
aes-gcm = "0.10"
rand = "0.8"
cfg-if = "1"
os_info = "3"
sysinfo = "0.33"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
wmi = "0.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "process", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"
core-foundation = "0.10"
